Fix APZ not starting and updating wheel animations within an APZC lock. (bug 1152011 part 1, r=botond)